# eio

./: Cargo.toml  README.md
src/: lib.rs  read.rs  write.rs
tests/: lib.rs  support.rs
