[package]
name = "eio"
version = "0.1.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "Read and write numbers in big-endian and little-endian."
readme = "README.md"
repository = "https://github.com/rossmacarthur/border"
license = "MIT OR Apache-2.0"
keywords = ["byte", "endian", "big-endian", "little-endian", "binary"]
categories = ["encoding", "parsing", "network-programming"]

[features]
default = ["std"]
std = []
